# Iridium

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  rebuild.sh  wrebuild.ps1
Iridium/: CMakeLists.txt
Iridium/Codegen/: CMakeLists.txt
Iridium/Codegen/include/Codegen/: Codegen.h
Iridium/Codegen/src/Codegen/: Codegen.cpp  ExprCodegen.cpp  FnCodegen.cpp  StmtCodegen.cpp  TypeCodegen.cpp
Iridium/Lex/: CMakeLists.txt
Iridium/Lex/include/: Lexer.h  TokType.h  Token.h
Iridium/Lex/include/Lex/: Lexer.h  TokType.h  Token.h
Iridium/Lex/src/: Lexer.cpp  TokType.cpp
Iridium/Lex/src/Lex/: Lexer.cpp  TokType.cpp  Token.cpp
Iridium/Main/: CMakeLists.txt
Iridium/Main/include/Main/: IridiumDriver.h  Opts.h  Sys.h
Iridium/Main/lib/: cxxopts.hpp
Iridium/Main/src/Main/: IridiumDriver.cpp  IridiumEntry.cpp  Opts.cpp  Sys.cpp
Iridium/Parse/: CMakeLists.txt
Iridium/Parse/include/Parse/: Parser.h
Iridium/Parse/include/Parse/AST/: ASTVisitor.h  Expr.h  Fn.h  NodeType.h  Stmt.h  Unit.h
Iridium/Parse/include/Parse/Type/: Context.h  Type.h
Iridium/Parse/src/Parse/: Parser.cpp
Iridium/Parse/src/Parse/AST/: ASTVisitor.cpp  NodeType.cpp  Unit.cpp
Iridium/Parse/src/Parse/Type/: Context.cpp  Type.cpp
Test/: CMakeLists.txt
Test/Codegen/: CodegenTest.cpp
Test/Lex/: LexTest.cpp
Test/Parse/: ParseTest.cpp
Test/examples/: extern_fn.ir  ifstmt.ir  mutvar.cpp  mutvar.ir  recursion.cpp  recursion.ir  struct.ir  whilestmt.ir
Test/src/: Gtest_Sanity.cpp
