find_package(LLVM CONFIG REQUIRED)
llvm_map_components_to_libnames(llvm_targets ${LLVM_TARGETS_TO_BUILD})
message("targets: ${llvm_targets}")

message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
add_subdirectory(Lex)
add_subdirectory(Parse)
add_subdirectory(Codegen)
add_subdirectory(Main)
